# melanoma-edge-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/data/: validation.yaml
configs/inference/: api.yaml  thresholds.yaml
data/splits/: test_split.csv  train_split.csv  val_split.csv
deploy/hf_spaces/: README.md  setup.sh
deploy/k8s/: deployment.yaml
docker/: Dockerfile.api  Dockerfile.api.arm64  Dockerfile.api.full  docker-compose.yml
docs/: architecture.md  model_card.md
docs/adr/: 002_runtime_choice.md  003_api_framework.md
docs/runbooks/: deployment.md  monitoring.md  troubleshooting.md
notebooks/: 01_environment_bootstrap.ipynb  02_data_overview.ipynb  03_patient_aware_splits.ipynb  04_eda.ipynb  07_training_baseline.ipynb  08_explainability.ipynb
reporting/artifacts/: api_explain_smoke.json  api_predict_smoke.json  calibration_summary.json  environment_summary.json  gradcam_summary.json  ham10000_eda_summary.json  ham10000_expectations_suite.json  ham10000_image_directories.csv  ham10000_metadata_summary.json  ham10000_split_summary.json  ham10000_validation_report.json  model_comparison.json  model_summary.json  onnx_auc_summary.json  onnx_benchmark.json  onnx_size_summary.json  preprocessing_hair_removal_summary.csv  preprocessing_pipeline_summary.json  quantization_comparison.json  training_full_batch_summary.json  (+14 more)
scripts/: quantize_test.py  run_training.py
src/: __init__.py
test_images/: INDEX.txt
tests/: conftest.py
(+107 files in other folders)
