[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "melanoma-edge-api"
version = "0.1.0"
description = "Edge-deployable melanoma detection API built step by step with uv and Jupyter notebooks."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "numpy>=1.26,<2.0",
  "pandas>=2.2,<3.0",
  "matplotlib>=3.9,<4.0",
  "seaborn>=0.13,<0.14",
  "Pillow>=10.0,<13.0",
  "opencv-python-headless>=4.9,<5.0",
  "imagehash>=4.3,<5.0",
  "onnx>=1.16,<1.17",
  "onnxruntime>=1.18,<2.0",
  "prometheus-client>=0.20,<1.0",
  "psutil>=5.9,<6.0",
  "PyYAML>=6.0,<7.0",
  "great-expectations>=0.18,<0.19",
  "evidently>=0.4,<0.5",
  "dvc>=3.0,<4.0",
  "albumentations>=1.4,<1.5",
  "torch>=2.3,<2.4",
  "timm>=0.9,<1.1",
  "mlflow>=2.12,<3.0",
  "scikit-learn>=1.4,<1.6",
  "ipykernel>=6.29,<7.0",
  "jupyterlab>=4.2,<5.0",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "structlog>=24.4,<26.0",
  "uvicorn>=0.29,<1.0",
  "gradio>=6.15.2",
  "plotly>=6.7.0",
  "kaleido>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.4,<0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
